--- a/web/src/components/navigation/style.css
+++ b/web/src/components/navigation/style.css
@@ -1,66 +1,58 @@
 .main-nav a {
     color: #f6f7f8;
-    background: #254441;
-    height: 64px;
+    min-height: 64px;
     font-weight: bold;
     display: flex;
     align-items: center;
     justify-content: center;
     text-decoration: none;
     transition: background 0.4s;
+    background: #254441;
 }
+
 .main-nav a:hover {
     background: #305753;
 }
 
+.main-nav > ul {
+    display: flex !important;
+    background: #254441;
+    flex-wrap: wrap;
+}
+
 .main-nav ul {
+    display: none;
     list-style: none;
-    display: flex;
+    list-style-type: none;
 }
 
 .main-nav li {
-    width: 100%;
+    min-width: 200px;
     text-align: center;
+}
+
+.submenu > li {
     position: relative;
 }
 
-.main-nav li:hover .submenu > li {
+.submenu-1 > li {
+    position: relative;
+}
+
+.submenu > li:hover .submenu-1 {
     display: block;
-    flex-direction: column;
-    top: 0;
-}
-
-.submenu li {
-    display: none;
-    position: absolute;
-    top: 0;
-}
-
-.submenu {
-    display: flex;
-    flex-direction: column;
     position: absolute;
     width: 100%;
+    z-index: 1;
 }
 
-.submenu li {
-    position: relative;
-}
-
-.submenu li:hover .submenu-2 li {
+.submenu-1 > li:hover .submenu-2 {
     display: block;
-}
-
-.submenu-2 li {
-    display: none;
-}
-.submenu-2 {
-    display: flex;
-    flex-direction: column;
     position: absolute;
-    top: 0;
     left: 100%;
-    width: 120px;
+    width: 100%;
+    top: 0px;
+    z-index: 2;
 }
 
 .arrow {
