--- a/web/src/components/shared/productItem/style.css
+++ b/web/src/components/shared/productItem/style.css
@@ -1,45 +1,47 @@
 .item{
-width: 400px;
-height:450x;
-margin-bottom: 50px;
-margin-top: 50px;
-margin-left: 50px;
-background-color: grey;
+    width: 400px;
+    height:450x;
+    margin-bottom: 50px;
+    margin-top: 50px;
+    margin-left: 50px;
+    background-color: grey;
 }
 
-.item_element{
-
-display: flex;
-align-items: center;
-justify-content: center;
+.item__header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.item_element_image{
-width: 350px;
-margin-top: 30px; 
- }
- .item_element_image:hover{
-opacity: 0.8;
+
+.item__header__image{
+    width: 350px;
+    margin-top: 30px; 
  }
 
- .item_footer{
-width: 100%;
-display: flex;
-flex-direction: column;
-font-size: 18px; 
+ .item__header__image:hover{
+    opacity: 0.8;
+ }
 
+ .item__body{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    font-size: 18px; 
 } 
-.item_footer_title{
-margin: auto;
-}
-.item_footer_description{
+
+.item__body__title{
     margin: auto;
 }
-.item_footer_price{
-margin: auto;
+
+.item__body__description{
+    margin: auto;
 }
 
+.item__body__price{
+    margin: auto;
+}
 
- .item_buttons{
+.item__buttons{
     min-width: 165px;
     width: auto;
     height: 50px;
@@ -55,7 +57,8 @@ margin: auto;
     display: flex;
     justify-content: center
  }
-.item_button {
+
+.item__button {
     background-color: black;
     color: white;
     opacity: 0.7;
@@ -65,14 +68,11 @@ margin: auto;
     border-radius: 15px;
     margin-bottom: 15px;
     cursor: pointer;
-
-  /* display: none; */
-
 }
-.item_button:hover {
+
+.item__button:hover {
     background-color: white;
     color: black;
     border: 1px solid black;
     transition: all 0.3s ease;
 }
-
