--- a/web/src/components/shared/productItem/style.css
+++ b/web/src/components/shared/productItem/style.css
@@ -1,10 +1,15 @@
 .item{
-    width: 400px;
-    height:450x;
+    width: 350px;
+    height:500x;
     margin-bottom: 50px;
     margin-top: 50px;
     margin-left: 50px;
-    background-color: grey;
+    border-color: hsl(84, 100%, 59%);
+    border-style: groove;
+    border-width: 3px;
+    -webkit-box-shadow: 8px 8px 24px 0px rgba(25, 119, 25, 1);
+    -moz-box-shadow: 8px 8px 24px 0px rgba(25, 119, 25, 1);
+    box-shadow: 8px 8px 24px 0px rgba(25, 119, 25, 1);
 }
 
 .item__header{
@@ -14,7 +19,7 @@
 }
 
 .item__header__image{
-    width: 300px;
+    width: 200px;
     height: auto;
     margin-top: 30px; 
  }
@@ -25,6 +30,7 @@
 
  .item__body{
     width: 100%;
+    height: 60px;
     display: flex;
     flex-direction: column;
     font-size: 18px; 
@@ -40,12 +46,15 @@
 
 .item__body__price{
     margin: auto;
+    color:green;
+    font-weight: 500;
 }
 
 .item__buttons{
+    margin-top: 30px;
     min-width: 165px;
     width: auto;
-    height: 50px;
+    height: 70px;
     letter-spacing: 0.5px;
     line-height: 50px;
     padding: 0 35px 0 35px;
@@ -61,7 +70,8 @@
 
 .item__button {
     width: 110px;
-    background-color: black;
+    margin: 10px 10px 10px 10px;
+    background-color: green;
     color: white;
     opacity: 0.7;
     display: flex;
@@ -73,7 +83,7 @@
 }
 
 .item__button:hover {
-    background-color: white;
+    background-color: greenyellow;
     color: black;
     border: 1px solid black;
     transition: all 0.3s ease;
