--- a/web/src/components/shared/productItem/style.css
+++ b/web/src/components/shared/productItem/style.css
@@ -1,6 +1,6 @@
 .item{
     width: 350px;
-    height:500x;
+    height:500px;
     margin-bottom: 50px;
     margin-top: 50px;
     margin-left: 50px;
