--- a/web/src/components/cart/style.css
+++ b/web/src/components/cart/style.css
@@ -1,52 +1,140 @@
-.item {
-    width: 236px;
-    height: 267px;
-    background-color: white;
-    color: #222222;
-    border: 1px solid #ECEFF1;
+.cart {
+    width: 80%;
+    background-color: #ffffff;
+    border-radius: 20px;
+    box-shadow: 0 25px 30px #305753;
+    margin: 20px auto auto;
+    padding: 10px;
     display: flex;
-    flex-direction: column;
-    cursor: pointer;
-    text-decoration: none;
-    padding: 16px;
-    border-radius: 8px;
-    margin: 5px;
+}
+
+.cart__list {
+    margin: auto;
+    width: 90%;
+    height: 30%;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
 }
 
-.item__image {
-    width: 100px;
-    height: 100px;
-    max-width: 100%;
-    position: relative;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    transition: all 0.3s ease-in-out 0s;
+.cart__item {
+    margin: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.item__image:hover {
-    transform: scale(1.3);
+.cart__item-image {
+    width: 200px;
+    margin-right: 15px;
+    text-align: center;
 }
 
-.item__price {
-    margin: 20px 10px 5px 10px;
-    font-size: 20px;
-    font-weight: bold;
+.cart__item-about {
+    width: 200px;
+    margin-right: 15px;
+    height: 100%;
 }
 
-.item__title {
+.cart__item-title {
+    padding-top: 5px;
+    font-size: 16px;
+    font-weight: 800;
+    color: #202020;
+}
+
+.cart__item-brand {
+    padding-top: 10px;
     font-size: 12px;
-    text-align: center;
-    min-height: 32px;
-    min-width: auto;
-    overflow: hidden;
+    font-weight: 600;
+    color: #909090;
 }
 
-.item__stars {
-    text-align: center;
-    color: #FFDC5E;
+.cart__item-counter {
+    margin-right: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
+.btn {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #d9d9d9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 900;
+    cursor: pointer;
+    border: none;
+}
+
+.count {
+    font-size: 16px;
+    font-weight: 900;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.cart__item-prices {
+    margin-right: 15px;
+    height: 100%;
+    text-align: right;
+    font-size: 14px;
+}
+
+.amount {
+    font-size: 16px;
+    font-weight: 900;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.cart__checkout {
+    float: right;
+    margin-right: 5%;
+    width: 28%;
+}
+
+.cart__checkout-total {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.cart__checkout-total-subtotal {
+    font-size: 14px;
+    font-weight: 700;
+    color: #202020;
+}
+
+.cart__checkout-total-items {
+    font-size: 12px;
+    font-weight: 500;
+    color: #909090;
+}
+
+.cart__checkout-total-amount {
+    font-size: 16px;
+    font-weight: 900;
+    color: #202020;
+}
+
+.cart__checkout-button {
+    margin-top: 5px;
+    width: 100%;
+    height: 40px;
+    border: none;
+    background: linear-gradient(to bottom right, #B8D7FF, #8EB7EB);
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 600;
+    color: #202020;
+}
+
+.cart ul {
+    list-style: none none;
+}
