--- a/web/src/components/navigation/style.css
+++ b/web/src/components/navigation/style.css
@@ -22,8 +22,7 @@
 
 .main-nav ul {
     display: none;
-    list-style: none;
-    list-style-type: none;
+    list-style: none none;
 }
 
 .main-nav li {
