--- a/web/src/components/shared/saleComponent/style.css
+++ b/web/src/components/shared/saleComponent/style.css
@@ -1,8 +1,22 @@
 .sale__container{
+    display: flex;
+    align-items: center;
 
 }
-.container__items{
+
+.sale__container__image{
     display: flex;
+    width: 1000px;
+    object-fit: cover;
+}
+
+.sale__container__items{
+    position: absolute;
+    margin-left: 400px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 800px;
+    
     
 }
 
@@ -33,10 +47,7 @@ display: grid;
     grid-area: 1 / 1 / 6 / 5; 
 
     
-}
-.sale__container__image{
-    width: 900px;
-}
+
 
 
 .div2 { grid-area: 1 / 3 / 3 / 4; }
