--- a/web/src/components/navigation/style.css
+++ b/web/src/components/navigation/style.css
@@ -59,3 +59,43 @@
     color: #eee;
     font-size: 12px;
 }
+
+.nav__icon{
+    display: none;        
+}
+
+@media screen and (max-width:720px){
+    .main-nav a {
+        position: relative;
+    }
+
+    .nav-links{
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        text-align: center;
+        width:50%;
+        top:30px;
+        left:-100%;
+        transition: 0.5s all;
+    }
+
+    .nav-links.active{
+        background-color:#254441 ;
+        left:0;
+    }
+
+    .main-nav >li{
+        padding: 10px 0;
+        border-top: 1px; 
+        border-top-style: solid;
+    }
+   
+
+     .nav__icon{
+        background-color:#254441 ;
+        display: flex;
+        color: white; 
+     }
+    
+}
