changed name component from SaleComponent to BestComponent and added corrections to display stars

--- a/web/src/components/shared/bestComponent/style.css
+++ b/web/src/components/shared/bestComponent/style.css
@@ -1,21 +1,19 @@
-.sale__container{
+.best__container{
     display: flex;
     align-items: center;
 
 }
 
-.sale__image{
+.best__image{
     display: flex;
     width: 1000px;
     object-fit: cover;
 }
 
-.sale__items{
+.best__items{
     position: absolute;
     margin-left: 400px;
     display: flex;
     flex-wrap: wrap;
     width: 800px;
-    
-    
 }
