Refactor Pagination component

--- a/web/src/components/shared/pagination/style.css
+++ b/web/src/components/shared/pagination/style.css
@@ -1,12 +1,14 @@
-.paginationWrapper {
+.pagination-wrapper {
     padding: 2rem 0;
     display: flex;
     justify-content: center;
 }
+
 .separator {
     width: 1rem;
     margin: 0 0.25rem;
 }
+
 .pageItem {
     background: transparent;
     border: none;
@@ -20,10 +22,6 @@
 
 .pageItem:hover {
      text-decoration: underline;
- }
-
-.pageItem:focus {
-     outline: 0;
  }
 
 .active {
