--- a/web/src/components/pages/sportsPage/style.css
+++ b/web/src/components/pages/sportsPage/style.css
@@ -6,9 +6,9 @@
     padding: 10px;
 }
 
-.sportItem {
+.sportItem__element {
     width: 350px;
-    height: 95%;
+    min-height: 95%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,7 +33,8 @@
 
 .sportItem__button {
     width: 110px;
-    height: 40px;
+    min-height: 2rem;
+    margin-top: 5px;
     background-color: green;
     color: white;
     opacity: 0.7;
@@ -42,4 +43,9 @@
     justify-content: space-around;
     border-radius: 15px;
     cursor: pointer;
+}
+
+.sportItem__icon {
+    font-size: 42px;
+    color: rgb(180, 180, 180);
 }
