Refactor Products Page styles

--- a/web/src/components/pages/productsPage/style.css
+++ b/web/src/components/pages/productsPage/style.css
@@ -1,4 +1,3 @@
-
 .products__page__title {
     display: flex;
     justify-content: center;
@@ -9,6 +8,9 @@
 .products__page__items {
     display: flex;
     flex-wrap: wrap;
+    margin-left: 100px;
+    margin-right: 100px;
+    justify-content: center;
 }
 
 .products__page__search {
