--- a/web/src/components/pages/productsPage/style.css
+++ b/web/src/components/pages/productsPage/style.css
@@ -18,6 +18,7 @@
     flex-wrap: wrap;
     margin-left: 100px;
     margin-right: 100px;
+    justify-content: center;
 }
 
 .products__page__search-price {
