--- a/web/src/components/pages/singleProductPage/components/singleProductComponent/style.css
+++ b/web/src/components/pages/singleProductPage/components/singleProductComponent/style.css
@@ -73,7 +73,7 @@
     font-size: 56px;
     font-weight: bold;
     padding: 0;
-    color: green;
+    color: var(--green-main);
     margin: 30px 0px 30px 0px;
 }
 
