--- a/web/src/components/pages/sportsPage/style.css
+++ b/web/src/components/pages/sportsPage/style.css
@@ -35,7 +35,7 @@
     width: 110px;
     min-height: 2rem;
     margin-top: 5px;
-    background-color: green;
+    background-color: var(--green-main);
     color: white;
     opacity: 0.7;
     display: flex;
