--- a/web/src/components/pages/sportsPage/style.css
+++ b/web/src/components/pages/sportsPage/style.css
@@ -2,13 +2,15 @@
     height: 82vh;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
     padding: 10px;
 }
 
 .sportItem__element {
-    width: 350px;
-    min-height: 95%;
+    height: 25rem;
+    width: 25rem;
+    margin: 0.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
