--- a/web/src/components/pages/singleProductPage/components/singleProductComponent/style.css
+++ b/web/src/components/pages/singleProductPage/components/singleProductComponent/style.css
@@ -6,13 +6,14 @@
 }
 
 .product__name {
-    height: 20%;
+    min-height: 20%;
     padding: 0;
     display: flex;
     justify-content: center;
     color: rgb(130, 255, 130);
     font-size: 36px;
     font-weight: bold;
+    margin-top: 20px;
 }
 
 .product__image--img {
