--- a/web/src/components/pages/singleProductPage/components/singleProductComponent/style.css
+++ b/web/src/components/pages/singleProductPage/components/singleProductComponent/style.css
@@ -10,7 +10,7 @@
     padding: 0;
     display: flex;
     justify-content: center;
-    color: rgb(130, 255, 130);
+    color: var(--green-light);
     font-size: 36px;
     font-weight: bold;
     margin-top: 20px;
@@ -33,13 +33,10 @@
     width: 30%;
     display: flex;
     flex-direction: column;
-    background-color: rgb(245, 245, 245);
-    border-color: hsl(84, 100%, 59%);
-    border-style: groove;
     border-width: 3px;
-    -webkit-box-shadow: 8px 8px 24px 0px rgba(25, 119, 25, 1);
-    -moz-box-shadow: 8px 8px 24px 0px rgba(25, 119, 25, 1);
-    box-shadow: 8px 8px 24px 0px rgba(25, 119, 25, 1);
+    -webkit-box-shadow: 0px 0px 24px -13px var(--green-dark);
+    -moz-box-shadow: 0px 0px 24px -13px var(--green-dark);
+    box-shadow: 0px 0px 24px -13px var(--green-dark);
 }
 
 .product__info--additional {
