--- a/web/src/components/navigation/style.css
+++ b/web/src/components/navigation/style.css
@@ -67,11 +67,11 @@
     display: none;
 }
 
-@media screen and (max-width:720px){
-    .main-nav a {
-        /* z-index: 3; */
-        position: relative;
 
+@media screen and (max-width:720px){
+   .main-nav a {
+        position: relative;
+        z-index: 2;
     }
  
     .nav-links{
@@ -87,25 +87,52 @@
 
     .main-nav li {
         border: solid white 2px;
-        background-color: rgb(17, 160, 17);
-}
+        z-index: 2;
+    }
 
     .nav-links.active{
-        background-color:#254441 ;
+        background-color:var(--green-main) ;
         left:0;
     }
 
     .main-nav >li{
         padding: 10px 0;
     }
-   
 
      .nav__icon{
         background-color:#254441 ;
         display: flex;
         color: white; 
      }
+
      .nav_arrow{
          display: none;
      }
+
+     .submenu >li>a{
+         background-color: #a9d0ce;
+         z-index: 2;
+     }
+
+     .main-nav > ul > li:hover > .submenu {
+        position: relative;
+        z-index: 3;
+        }
+        
+    .main-nav > ul > li:hover a{
+        background-color:  #a9d0ce;
+        }
+
+    .main-nav > ul > li:hover a:hover{
+        background-color:  var(--green-main);
+        }
+
+    .main-nav > ul > li:hover > .submenu {
+        position: relative;
+        z-index: 3;
+        }   
+
+    .main-nav a:hover{
+        background-color:  #a9d0ce;
+        }
 }
