--- a/web/src/components/navigation/style.css
+++ b/web/src/components/navigation/style.css
@@ -1,5 +1,10 @@
+.main-nav {
+    background: white;
+    box-shadow: 0 1px 2px rgba(58, 58, 68, 0.24), 0 2px 4px rgba(90, 91, 106, 0.24);
+}
+
 .main-nav a {
-    color: #f6f7f8;
+    color: #787885;
     min-height: 64px;
     font-weight: bold;
     display: flex;
@@ -7,16 +12,15 @@
     justify-content: center;
     text-decoration: none;
     transition: background 0.4s;
-    background: var(--green-dark);
+    background: white;
 }
 
 .main-nav a:hover {
-    background: var(--green-main);
+    border-bottom: 0.2rem solid #0C2146;
 }
 
 .main-nav > ul {
     display: flex !important;
-    background: var(--green-dark);
     flex-wrap: wrap;
 }
 
@@ -26,7 +30,7 @@
 }
 
 .main-nav li {
-    min-width: 200px;
+    min-width: 150px;
     text-align: center;
 }
 
@@ -43,6 +47,7 @@
     position: absolute;
     width: 100%;
     z-index: 1;
+    box-shadow: 0 1px 2px rgba(58, 58, 68, 0.24), 0 2px 4px rgba(90, 91, 106, 0.24);
 }
 
 .submenu > li:hover > .submenu {
@@ -52,10 +57,50 @@
     width: 100%;
     top: 0px;
     z-index: 2;
+    box-shadow: 0 1px 2px rgba(58, 58, 68, 0.24), 0 2px 4px rgba(90, 91, 106, 0.24);
 }
 
 .arrow {
     margin-left: 8px;
-    color: #eee;
+    color: #787885;
     font-size: 12px;
+}
+
+.nav-logo-img {
+    margin-left: 16px;
+    width: 40px;
+}
+
+.nav-logo a:hover {
+    border-bottom: none;
+}
+
+.nav-logo-name {
+    margin-left: 12px;
+    font-size: 36px;
+    font-weight: 500;
+    line-height: 36px;
+    letter-spacing: 0;
+    text-align: left;
+    margin-right: 16px;
+    color: #0C2146;
+}
+
+.nav-cart {
+    margin-left: auto;
+}
+
+.nav-cart a:hover {
+    border-bottom: none;
+}
+
+.nav-cart-badge {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    right: 50px;
+    top: calc(50% - 20px/2 - 12px);
+    background: #F44336;
+    border-radius: 99px;
+    color: #FFFFFF;
 }
