--- a/web/src/components/shared/searchInput/style.css
+++ b/web/src/components/shared/searchInput/style.css
@@ -1,25 +1,27 @@
 .products__search {
-    margin: 5px 20px 5px 20px;
+    background: #EDEDF0;
+    border-radius: 99px;
+    height: 52px;
+    width: 310px;
     display: flex;
-    color: var(--green-main);
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
 }
 
 .products__search-icon {
-    margin-right: 0px;
-    display: flex;
-    align-items: center;
-    height: 50px;
-    width: 50px;
-
+    margin-left: 15px;
+    height: 18px;
+    width: 18px;
+    color: #2264D1;
 }
 
 .products__search__input {
-    width: 140px;
-    height: 40px;
-    text-align: center;
-    padding: 7px;
-    margin: 5px 5px 5px 0px;
-    border-color: var(--green-main);
-    border-width: 3px;
-    border-radius: 12px;
+    margin-left: 8px;
+    line-height: 32px;
+    width: 253px;
+    text-align: left;
+    border: none;
+    background: #EDEDF0;
+    outline: none;
 }
