--- a/web/src/components/shared/button/style.css
+++ b/web/src/components/shared/button/style.css
@@ -74,25 +74,27 @@
 /* BUTTO--secondary */
 
 .button--secondary {
-    width: 145px;
-    height: 50px;
-    margin: 15px 15px 15px 15px;
-    background: var(--green-light);
-    font: normal bold 18px "Open Sans", sans-serif;
-    border-radius: 12px;
     display: inline-block;
     cursor: pointer;
     text-align: center;
-    color: #202020;
-    border: none;
+    background: #FFFFFF;
+    border: 1px solid #9DC2FF;
+    border-radius: 4px;
+    width: 110px;
+    height: 32px;
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 143%;
+    letter-spacing: 0.018em;
+    color: #2264D1;
 }
 
 .button--secondary:hover {
-    border: solid #86e9ca 2px;
-    background-color: white;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    border-radius: 13px;
+    background-color: #9DC2FF;
+    color: black;
+    transition: all 0.3s ease;
     text-decoration: none;
 }
 
