--- a/web/src/components/shared/productItem/style.css
+++ b/web/src/components/shared/productItem/style.css
@@ -1,88 +1,95 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Red+Hat+Display&display=swap');
+
 .product__item {
-    height: 550px;
-    width: 350px;
-    margin: 25px;
-    border-color: var(--green-light);
-    border-style: groove;
-    border-width: 3px;
-    -webkit-box-shadow: 8px 8px 24px 0 var(--green-shadow);
-    -moz-box-shadow: 8px 8px 24px 0 var(--green-shadow);
-    box-shadow: 8px 8px 24px 0 var(--green-shadow);
+    height: 422px;
+    width: 268px;
     display: flex;
     flex-direction: column;
+    margin: 8px;
+    border-radius: 4px;
+}
+
+.product-link {
+    text-decoration: none;
+}
+
+.product__item:hover {
+    box-shadow: 0 2px 4px rgba(59, 69, 123, 0.2), 0 4px 8px rgba(92, 107, 192, 0.2);
+    border-radius: 8px;
+    border: none;
 }
 
 .product__header {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 10px;
+    margin-left: 16px;
+    margin-right: 16px;
+    margin-top: 16px;
+    border-radius: 4px;
 }
 
 .product__image {
-    width: 200px;
-    height: 200px;
-    margin-top: 30px;
-    margin-bottom: 30px;
-}
-
-.product__image:hover {
-    opacity: 0.8;
+    width: 224px;
+    height: 224px;
 }
 
 .product__body {
-    width: 100%;
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
-    font-size: 18px;
-    padding: 10px 30px;
+    margin-left: 16px;
+    margin-right: 16px;
+    margin-top: 12px;
+    text-decoration: none;
 }
 
 .product__title {
-    margin: auto;
-    padding: 1.5em 1.5em;
-}
-
-.product__description {
-    margin: auto;
-    padding: 1.5em 1.5em;
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.0275em;
+    color: #19191D;
+    width: 232px;
+    text-align: left;
+    height: 24px;
 }
 
 .product__price {
-    margin: auto;
-    color: var(--green-main);
-    font-weight: 500;
+    height: 36px;
+    margin-top: 8px;
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 150%;
+    color: rgba(0, 0, 0, 0.87);
+    width: 232px;
+    text-align: left;
+}
+
+.product__description {
+    height: 41px;
+    margin-top: 8px;
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 143%;
+    width: 232px;
+    text-align: left;
+    color: #787885;
 }
 
 .product__buttons {
-    height: 70px;
-    display: flex;
-    justify-content: center;
-}
-
-.product__button {
-    width: 110px;
-    background-color: var(--green-main);
-    color: white;
-    opacity: 0.7;
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    border-radius: 15px;
-    margin: 10px 10px 15px;
-    cursor: pointer;
-    font-weight: 900;
-}
-
-.product__button:hover {
-    background-color: var(--green-light);
-    color: black;
-    border: 1px solid black;
-    transition: all 0.3s ease;
-}
-
-.product__button-link {
-    text-decoration: none;
-    color: white;
-    font-weight: 900;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+    margin-left: 16px;
+    margin-right: 16px;
+    margin-top: 9px;
 }
