--- a/web/src/components/shared/pagination/style.css
+++ b/web/src/components/shared/pagination/style.css
@@ -17,16 +17,15 @@
     margin: 0 0.25rem;
     border-radius: 50%;
     font-weight: 600;
-    color: darkslategray;
+    color: black;
 }
 
 .pageItem:hover {
-     text-decoration: underline;
- }
+    text-decoration: underline;
+}
 
 .active {
-    background-color: darkslategray;
-    color: white;
+    background-color: #9DC2FF;
 }
 
 .sides {
@@ -34,6 +33,6 @@
 }
 
 .sides:hover {
-     text-decoration: none;
-     box-shadow: transparent 0 0 0 1px, transparent 0 0 0 4px, rgba(0, 0, 0, 0.12) 0 6px 16px;
- }
+    text-decoration: none;
+    box-shadow: transparent 0 0 0 1px, transparent 0 0 0 4px, rgba(0, 0, 0, 0.12) 0 6px 16px;
+}
