--- a/web/src/components/navigation/style.css
+++ b/web/src/components/navigation/style.css
@@ -86,8 +86,11 @@
     color: #0C2146;
 }
 
-.nav-cart {
+.nav-signIn {
     margin-left: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .nav-cart a:hover {
@@ -98,8 +101,8 @@
     position: absolute;
     width: 20px;
     height: 20px;
-    right: 50px;
-    top: calc(50% - 20px/2 - 12px);
+    right: 30px;
+    top: calc(50% - 20px / 2 - 12px);
     background: #F44336;
     border-radius: 99px;
     color: #FFFFFF;
