--- a/web/src/components/pages/productsPage/style.css
+++ b/web/src/components/pages/productsPage/style.css
@@ -28,13 +28,13 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    background: #FFFFFF;
-    box-shadow: 0 1px 2px rgba(58, 58, 68, 0.24), 0 2px 4px rgba(90, 91, 106, 0.24);
+    background: var(--main-background);
+    box-shadow: 0 1px 2px var(--box-shadow1), 0 2px 4px var(--box-shadow2);
     border-radius: 8px;
 }
 
 .products-page__filter {
-    margin-top: 60px;
+    margin-top: 50px;
     padding-right: 45px;
     display: inline-block;
     position: relative;
@@ -50,8 +50,8 @@
     flex-direction: row;
     flex-wrap: nowrap;
     align-items: center;
-    background: #FFFFFF;
-    box-shadow: 0 1px 2px rgba(58, 58, 68, 0.24), 0 2px 4px rgba(90, 91, 106, 0.24);
+    background: var(--main-background);
+    box-shadow: 0 1px 2px var(--box-shadow1), 0 2px 4px var(--box-shadow2);
     border-radius: 4px;
     height: 40px;
     width: 310px;
@@ -65,7 +65,7 @@
     flex-direction: row;
     flex-wrap: nowrap;
     align-items: center;
-    background: #F7F7FA;
+    background: var(--secondary-background);
     border-radius: 4px;
     height: 40px;
     width: 310px;
@@ -77,7 +77,7 @@
 .products-page__filter-arrow {
     margin-left: auto;
     margin-right: 24px;
-    color: #2264D1;
+    color: var(--icons);
     font-size: 12px;
 }
 
@@ -85,10 +85,10 @@
     top: 100%;
     left: 0;
     width: 310px;
-    background: #F7F7FA;
+    background: var(--secondary-background);
 }
 
-.products-page__filter-dropdown-list{
+.products-page__filter-dropdown-list {
     list-style: none;
     padding: 0;
     margin: 0;
@@ -102,7 +102,7 @@
 .search-price-button {
     margin: 10px;
     height: 40px;
-    border: 1px solid #CCCCCC;
+    border: 1px solid var(--input-border);
     padding: 8px;
     border-radius: 4px;
     width: 120px;
