--- a/web/src/components/pages/singleProductPage/components/singleProductComponent/style.css
+++ b/web/src/components/pages/singleProductPage/components/singleProductComponent/style.css
@@ -10,7 +10,7 @@
     padding: 0;
     display: flex;
     justify-content: center;
-    color: var(--green-light);
+    color: var(--product-title);
     font-size: 36px;
     font-weight: bold;
     margin-top: 20px;
@@ -34,9 +34,8 @@
     display: flex;
     flex-direction: column;
     border-width: 3px;
-    -webkit-box-shadow: 0px 0px 24px -13px var(--green-dark);
-    -moz-box-shadow: 0px 0px 24px -13px var(--green-dark);
-    box-shadow: 0px 0px 24px -13px var(--green-dark);
+    border-radius: 4px;
+    box-shadow: 0 2px 4px var(--box-shadow1), 0 4px 8px var(--box-shadow2);
 }
 
 .product__info--additional {
@@ -71,7 +70,7 @@
     font-size: 56px;
     font-weight: bold;
     padding: 0;
-    color: var(--green-main);
+    color: var(--product-price);
     margin: 30px 0px 30px 0px;
 }
 
@@ -95,7 +94,7 @@
 }
 
 .product__button--container {
-    margin-top: 0px;
+    margin-top: 0;
     margin-bottom: 20px;
 }
 
@@ -103,8 +102,11 @@
     margin-top: 15px;
     height: 40px;
     width: 62.5%;
-    border-radius: 15px;
     text-align: center;
+    background-color: var(--secondary-background);
+    border: 1px solid var(--input-border);
+    padding: 8px;
+    border-radius: 8px;
 }
 
 .product__size--label {
