--- a/web/src/components/shared/productItem/style.css
+++ b/web/src/components/shared/productItem/style.css
@@ -14,7 +14,7 @@
 }
 
 .product__item:hover {
-    box-shadow: 0 2px 4px rgba(59, 69, 123, 0.2), 0 4px 8px rgba(92, 107, 192, 0.2);
+    box-shadow: 0 2px 4px var(--box-shadow1), 0 4px 8px var(--box-shadow2);
     border-radius: 8px;
     border: none;
 }
@@ -52,7 +52,7 @@
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.0275em;
-    color: #19191D;
+    color: var(--product-title);
     width: 232px;
     text-align: left;
     height: 24px;
@@ -66,7 +66,7 @@
     font-weight: 700;
     font-size: 24px;
     line-height: 150%;
-    color: rgba(0, 0, 0, 0.87);
+    color: var(--product-price);
     width: 232px;
     text-align: left;
 }
@@ -81,7 +81,7 @@
     line-height: 143%;
     width: 232px;
     text-align: left;
-    color: #787885;
+    color: var(--product-description);
 }
 
 .product__buttons {
