--- a/web/src/components/shared/button/style.css
+++ b/web/src/components/shared/button/style.css
@@ -1,3 +1,9 @@
+.button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 /* BUTTON PRIMARY */
 .button--primary {
     width: 130px;
