--- a/web/src/components/shared/carousel/style.css
+++ b/web/src/components/shared/carousel/style.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: var(--secondary-background);
 }
 
 .carousel__item {
@@ -11,6 +12,10 @@
     visibility: hidden;
     opacity: 0;
     transition: all 0.8s ease-out;
+}
+
+img {
+    border-radius: 8px;
 }
 
 .carousel__item--active {
