--- a/web/src/components/shared/spinner/style.css
+++ b/web/src/components/shared/spinner/style.css
@@ -1,10 +1,16 @@
 .spinner {
-    border: 16px solid #f3f3f3;
-    border-top: 16px solid #6a6a6a;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    animation: spin 1s linear infinite;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80px;
+    height: 80px;
+
+    border: 2px solid var(--main-background);
+    border-top: 3px solid var(--icons);
+    border-radius: 100%;
+
+    animation: spin 1s infinite linear;
 }
 
 @keyframes spin {
