--- a/web/src/components/shared/tooltip/style.css
+++ b/web/src/components/shared/tooltip/style.css
@@ -1,38 +1,86 @@
-.tooltip {
-    position: relative;
+:root {
+    --tooltip-text-color: white;
+    --tooltip-background-color: #555;
+    --tooltip-margin: 30px;
+    --tooltip-arrow-size: 6px;
+}
+
+.Tooltip-Wrapper {
     display: inline-block;
-    border-bottom: 1px dotted black;
+    position: relative;
 }
 
-.tooltip .tooltiptext {
-    visibility: hidden;
-    width: 120px;
-    background-color: #555;
-    color: #fff;
+.Tooltip-Tip {
+    position: absolute;
+    border-radius: 4px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 6px;
+    color: var(--tooltip-text-color);
+    background: var(--tooltip-background-color);
+    font-size: 14px;
+    font-family: sans-serif;
+    line-height: 1;
+    z-index: 100;
+    width: 18rem;
+    overflow-wrap: break-word;
     text-align: center;
-    border-radius: 6px;
-    padding: 5px 0;
-    position: absolute;
-    z-index: 1;
-    bottom: 125%;
-    left: 50%;
-    margin-left: -60px;
-    opacity: 0;
-    transition: opacity 0.3s;
 }
 
-.tooltip .tooltiptext::after {
-    content: '';
+.Tooltip-Tip::before {
+    content: ' ';
+    left: 50%;
+    border: solid transparent;
+    height: 0;
+    width: 0;
     position: absolute;
+    pointer-events: none;
+    border-width: var(--tooltip-arrow-size);
+    margin-left: calc(var(--tooltip-arrow-size) * -1);
+}
+
+.Tooltip-Tip.top {
+    top: calc(var(--tooltip-margin) * -1);
+}
+
+.Tooltip-Tip.top::before {
     top: 100%;
-    left: 50%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #555 transparent transparent transparent;
+    border-top-color: var(--tooltip-background-color);
 }
 
-.tooltip:hover .tooltiptext {
-    visibility: visible;
-    opacity: 1;
+.Tooltip-Tip.right {
+    left: calc(100% + var(--tooltip-margin));
+    top: 50%;
+    transform: translateX(0) translateY(-50%);
+}
+
+.Tooltip-Tip.right::before {
+    left: calc(var(--tooltip-arrow-size) * -1);
+    top: 50%;
+    transform: translateX(0) translateY(-50%);
+    border-right-color: var(--tooltip-background-color);
+}
+
+.Tooltip-Tip.bottom {
+    bottom: calc(var(--tooltip-margin) * -1);
+}
+
+.Tooltip-Tip.bottom::before {
+    bottom: 100%;
+    border-bottom-color: var(--tooltip-background-color);
+}
+
+.Tooltip-Tip.left {
+    left: auto;
+    right: calc(100% + var(--tooltip-margin));
+    top: 50%;
+    transform: translateX(0) translateY(-50%);
+}
+
+.Tooltip-Tip.left::before {
+    left: auto;
+    right: calc(var(--tooltip-arrow-size) * -2);
+    top: 50%;
+    transform: translateX(0) translateY(-50%);
+    border-left-color: var(--tooltip-background-color);
 }
