--- a/web/src/index.css
+++ b/web/src/index.css
@@ -9,6 +9,7 @@
 :root {
     --main-background: #FFF;
     --secondary-background: #F7F7FA;
+    --search-background: #EDEDF0;
     --icons: #2264D1;
     --box-shadow1: rgba(58, 58, 68, 0.24);
     --box-shadow2: rgba(90, 91, 106, 0.24);
@@ -19,7 +20,8 @@
     --product-title: #19191D;
     --product-price: rgba(0, 0, 0, 0.87);
     --product-description: #787885;
-    --buttons: #9DC2FF;
+    --buttons-light: #9DC2FF;
+    --buttons: #2264D1;
 }
 
 html, body {
